--- a/codeAcademy/index.html
+++ b/codeAcademy/index.html
@@ -203,7 +203,7 @@
     
 
     <div class="containerform">
-      <h2>Formulario de Contacto</h2>
+      <h2 class="h2form">Formulario de Contacto</h2>
       <form id="contactForm" onsubmit="return validateForm()">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre" >
