--- a/codeAcademy/index.html
+++ b/codeAcademy/index.html
@@ -88,7 +88,7 @@
     </section>
 
     <section class="info-cursos">
-        <h2 id="nuestroscursos">NUESTROS CURSOS</h2>
+        <h2 id="Cursos">NUESTROS CURSOS</h2>
         <article class="curso">
           <div class="info-curso-superior">
             <div class="titulo-curso">
@@ -202,7 +202,7 @@
     </section>
     
 
-    <div class="containerform">
+    <div class="containerform" id="Inscripcion">
       <h2 class="h2form">Formulario de Contacto</h2>
       <form id="contactForm" onsubmit="return validateForm()">
         <label for="nombre">Nombre:</label>
