--- a/index.html
+++ b/index.html
@@ -260,28 +260,50 @@
       <div class="containerform" id="Inscripcion">
         <h2 class="h2form">Formulario de Contacto</h2>
         <form id="contactForm" onsubmit="return validateForm()">
-          <label for="nombre">Nombre:</label>
-          <input type="text" id="nombre" name="nombre" />
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" />
-          <label for="telefono">Teléfono:</label>
-          <input type="tel" id="telefono" name="telefono" />
-          <label for="edad">Edad:</label>
-          <input type="text" id="edad" name="edad" />
-          <label for="consultas">Consultas:</label>
-          <textarea id="consultas" name="consultas" rows="4"></textarea>
-          <label for="cursos">Cursos:</label>
-          <select id="cursos" name="cursos">
-            <option value="">Seleccione un curso</option>
-            <option value="programacion_inicial">Programación Inicial</option>
-            <option value="javascript">JavaScript</option>
-            <option value="python">Python</option>
-            <option value="diseno_ui_ux">Diseño UI/UX</option>
-          </select>
-          <div id="error" class="error"></div>
-          <button type="submit">Enviar</button>
+            <div class="form-group">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" />
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" />
+            </div>
+            <div class="form-group">
+                <label for="telefono">Teléfono:</label>
+                <input type="tel" id="telefono" name="telefono" />
+            </div>
+            <div class="form-group">
+                <label for="edad">Edad:</label>
+                <input type="number" id="edad" name="edad" />
+            </div>
+            <div class="form-group">
+                <label for="file">Archivo:</label>
+                <input type="file" id="file" name="file">
+            </div>
+            <div class="form-group">
+                <label for="consultas">Consultas:</label>
+                <textarea id="consultas" name="consultas" rows="4"></textarea>
+            </div>
+            <div class="form-group">
+                <input type="checkbox" id="experiencia" name="experiencia">
+                <label for="experiencia">Tengo experiencia previa</label>
+            </div>
+            <div class="form-group">
+                <label for="cursos">Cursos:</label>
+                <select id="cursos" name="cursos">
+                    <option value="">Seleccione un curso</option>
+                    <option value="programacion_inicial">Programación Inicial</option>
+                    <option value="javascript_inicial">JavaScript Inicial</option>
+                    <option value="javascript_intermedio">JavaScript Intermedio</option>
+                    <option value="python">Python</option>
+                    <option value="diseno_ui_ux_inicial">Diseño UI/UX Inicial</option>
+                    <option value="diseno_ui_ux_intermedio">Diseño UI/UX Intermedio</option>
+                </select>
+            </div>
+            <div id="error" class="error"></div>
+            <button type="submit">Enviar</button>
         </form>
-      </div>
+    </div>
 
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
